--- a/GeoMastery.BlazorWASM/GeoMastery.BlazorWASM.csproj
+++ b/GeoMastery.BlazorWASM/GeoMastery.BlazorWASM.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.5" />
+    <PackageReference Include="SqliteWasmHelper" Version="1.1.1-beta-gd0df7e5d62" />
   </ItemGroup>
 
   <ItemGroup>
