move persistence logic to persistence layer, add extension method, debugging seed class

--- a/GeoMastery.CountriesAPI/GeoMastery.CountriesAPI.csproj
+++ b/GeoMastery.CountriesAPI/GeoMastery.CountriesAPI.csproj
@@ -10,4 +10,14 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GeoMastery.Domain\GeoMastery.Domain.csproj" />
+    <ProjectReference Include="..\GeoMastery.Persistence\GeoMastery.Persistence.csproj" />
+  </ItemGroup>
+
+    <ItemGroup>
+	    <None Include="SeedData\**" CopyToOutputDirectory="PreserveNewest" />
+    </ItemGroup>
+
+
 </Project>
