relocate test data (not needed anymore, consolidating directory folders)

--- a/GeoMastery.CountriesAPI/GeoMastery.CountriesAPI.csproj
+++ b/GeoMastery.CountriesAPI/GeoMastery.CountriesAPI.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
     <ItemGroup>
-	    <None Include="TestSeedData\**" CopyToOutputDirectory="PreserveNewest" />
+	    <None Include="SeedData\TestSeedData\**" CopyToOutputDirectory="PreserveNewest" />
     </ItemGroup>
 
     <ItemGroup>
