--- a/GeoMastery.CountriesAPI/GeoMastery.CountriesAPI.csproj
+++ b/GeoMastery.CountriesAPI/GeoMastery.CountriesAPI.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GeoMastery.CountriesAPI.Contracts\GeoMastery.CountriesAPI.Contracts.csproj" />
     <ProjectReference Include="..\GeoMastery.Domain\GeoMastery.Domain.csproj" />
     <ProjectReference Include="..\GeoMastery.Persistence\GeoMastery.Persistence.csproj" />
   </ItemGroup>
