--- a/GeoMastery.BlazorWASM/wwwroot/appsettings.json
+++ b/GeoMastery.BlazorWASM/wwwroot/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "CountriesApi": {
-      "BaseUrl": "http://localhost:8080/api/v1/"
-    }
+  "CountriesApi": {
+    "BaseUrl": "https://localhost:7252/api/v1/"
+  }
 }
