--- a/GeoMastery.BlazorWASM/GeoMastery.BlazorWASM.csproj
+++ b/GeoMastery.BlazorWASM/GeoMastery.BlazorWASM.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.5" PrivateAssets="all" />
+    <PackageReference Include="SqliteWasmHelper" Version="1.0.7-beta-g48d390be69" />
   </ItemGroup>
 
   <ItemGroup>
