create seeder class with httpclient for json data loading

--- a/GeoMastery.BlazorWASM/wwwroot/appsettings.json
+++ b/GeoMastery.BlazorWASM/wwwroot/appsettings.json
@@ -1,5 +1,8 @@
 {
   "CountriesApi": {
     "BaseUrl": "https://localhost:7252/api/v1/"
+  },
+  "LocalData": {
+    "Directory": "sample-data/"
   }
 }
